<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>eiquadprog</name>
    <version>1.2.3</version>
    <description>
        Eiquadprog a QP solver using active sets
    </description>
    <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
    <license>LGPLv3</license>

    <url>git@github.com:stack-of-tasks/eiquadprog.git</url>
    <author>Gabriele Buondonno</author>
    <author>Andrea Del Prete</author>
    <author>Luca Di Gaspero</author>
    <author>Angelo Furfaro</author>
    <author>Benjamin Stephens</author>
    <author>Gael Guennebaud</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <build_depend>eigen</build_depend>
    <build_export_depend>eigen</build_export_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
